--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header class="bg-black p-4 flex justify-between items-center">
-        <a href="#" class="text-2xl text-gray-100 font-bold">My Portfolio</a>
+        <a href="#" class="text-2xl text-gray-100 font-bold">Creatifying</a>
         <button class="text-gray-100 focus:outline-none md:hidden" id="menu-button">
           <i class="fas fa-bars"></i>
         </button>
@@ -56,15 +56,7 @@
         };
     </script>
 
-
-    <!-- <section class="bg-black h-screen flex items-center justify-center">
-        <div class="text-center text-white w-full max-w-3xl">
-            <h1 class="text-5xl font-bold mb-4">Welcome to my portfolio</h1>
-            <p class="text-xl mb-8">I'm a full-stack developer with 5 years of experience</p>
-            <a href="#" class="bg-red-500 text-white px-4 py-2 rounded-full">Learn more</a>
-        </div>
-    </section> -->
-    <section class="bg-black py-20 px-5" id="home">
+    <!-- <section class="bg-black py-20 px-5" id="home">
         <div class="container mx-auto flex flex-col items-center px-4">
             <img src="profile.png" alt="Profile" class="rounded-full w-48 h-48 mb-4">
             <h1 class="text-4xl font-bold text-gray-100 mb-4">Creatifying</h1>
@@ -73,10 +65,26 @@
             </center>
             <a href="#" class="px-4 py-2 font-bold text-white bg-red-500 rounded-full shadow-lg hover:bg-teal-400">Learn More</a>
         </div>
+    </section> -->
+
+
+    <section class="bg-gray-900 py-32 text-center">
+        <div class="container mx-auto flex flex-col items-center px-4 ">
+            <img src="profile.png" alt="Profile" class="rounded-full w-48 h-48 mb-4">
+
+        </div>
+        <h1 class="text-5xl font-bold text-white ">Welcome to My Portfolio</h1>
+        <p class="text-xl font-semibold text-white mt-4 mx-4">I am a creative and driven software developer with 5 years of experience building web and mobile applications.</p>
+
+        <div class=" mt-8 mx-auto text-center">
+            <a href="#contact" class="bg-yellow-500 mx-auto px-4 py-2 text-sm font-bold text-white rounded-full hover:bg-yellow-600 ml-4 transition duration-200 ease-in-out">Contact Me</a>
+        </div>
+
     </section>
 
-    <hr>
-    <section class="bg-gray-800 py-8 px-5" id="about">
+
+
+    <section class="bg-gray-800 py-8 " id="about">
         <div class="container mx-auto flex flex-col items-center px-4">
             <br>
             <h2 class="text-3xl font-bold text-gray-100 mb-4">About Me</h2>
@@ -85,7 +93,7 @@
             </center>
             <br><br>
             <h3 class="text-2xl font-bold text-gray-100 mb-4">Skills</h3>
-            <div class="flex flex-wrap">
+            <div class="flex flex-wrap md:justify-between">
                 <div class="w-1/3 p-4">
                     <div class="bg-pink-500 rounded-full p-4 flex items-center justify-center mb-4">
                         <i class="fas fa-code text-4xl text-white"></i>
@@ -102,7 +110,7 @@
                 </div>
                 <div class="w-1/3 p-4">
                     <div class="bg-yellow-500 rounded-full p-4 flex items-center justify-center mb-4">
-                        <i class="fas fa-th text-4xl text-white"></i>
+                        <i class="fab fa-js text-4xl text-white"></i>
                     </div>
                     <h4 class="text-xl font-bold text-gray-100 mb-2">JavaScript</h4>
                     <p class="text-gray-100">I have a strong understanding of JavaScript and have experience building web applications using various libraries and frameworks such as React and Angular</p>
@@ -136,75 +144,78 @@
             </div>
             <br><br>
         </div>
-    </section>
-    <hr>
-    <section class="bg-gray-800 py-8 px-3 " id="contact">
-        <div class="container mx-auto flex flex-col items-center px-4">
-            <h2 class="text-3xl font-bold text-gray-100 mb-4">Get in touch</h2>
-            <form class="w-full max-w-md">
-                <div class="flex flex-wrap -mx-3 mb-6">
-                    <div class="w-full px-3">
-                        <label class="block uppercase tracking-wide text-gray-100 text-xs font-bold mb-2" for="name">
+
+        <section class="bg-gray-800 py-8 px-3 " id="contact">
+            <div class="container mx-auto flex flex-col items-center px-4">
+                <h2 class="text-3xl font-bold text-gray-100 mb-4">Get in touch</h2>
+                <form class="w-full max-w-md">
+                    <div class="flex flex-wrap -mx-3 mb-6">
+                        <div class="w-full px-3">
+                            <label class="block uppercase tracking-wide text-gray-100 text-xs font-bold mb-2" for="name">
                   Name
                 </label>
-                        <input class="appearance-none block w-full bg-gray-700 text-gray-100 border border-gray-700 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-gray-600" id="name" type="text" placeholder="John Smith">
+                            <input class="appearance-none block w-full bg-gray-700 text-gray-100 border border-gray-700 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-gray-600" id="name" type="text" placeholder="John Smith">
+                        </div>
                     </div>
-                </div>
-                <div class="flex flex-wrap -mx-3 mb-6">
-                    <div class="w-full px-3">
-                        <label class="block uppercase tracking-wide text-gray-100 text-xs font-bold mb-2" for="email">
+                    <div class="flex flex-wrap -mx-3 mb-6">
+                        <div class="w-full px-3">
+                            <label class="block uppercase tracking-wide text-gray-100 text-xs font-bold mb-2" for="email">
                   Email
                 </label>
-                        <input class="appearance-none block w-full bg-gray-700 text-gray-100 border border-gray-700 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-gray-600" id="email" type="email" placeholder="john@example.com">
+                            <input class="appearance-none block w-full bg-gray-700 text-gray-100 border border-gray-700 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-gray-600" id="email" type="email" placeholder="john@example.com">
+                        </div>
                     </div>
-                </div>
-                <div class="flex flex-wrap -mx-3 mb-6">
-                    <div class="w-full px-3">
-                        <label class="block uppercase tracking-wide text-gray-100 text-xs font-bold mb-2" for="message">
+                    <div class="flex flex-wrap -mx-3 mb-6">
+                        <div class="w-full px-3">
+                            <label class="block uppercase tracking-wide text-gray-100 text-xs font-bold mb-2" for="message">
                   Message
                 </label>
-                        <textarea class="appearance-none block w-full bg-gray-700 text-gray-100 border border-gray-700 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-gray-600" id="message" placeholder="Hello, I am interested in your services."></textarea>
+                            <textarea class="appearance-none block w-full bg-gray-700 text-gray-100 border border-gray-700 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-gray-600" id="message" placeholder="Hello, I am interested in your services."></textarea>
+                        </div>
                     </div>
-                </div>
-                <div class="flex flex-wrap -mx-3 mb-2">
-                    <div class="w-full px-3">
-                        <button class="px-4 py-2 font-bold text-white bg-red-500 rounded-full shadow-lg hover:bg-teal-400" type="button">
+                    <div class="flex flex-wrap -mx-3 mb-2">
+                        <div class="w-full px-3">
+                            <button class="px-4 py-2 font-bold text-white bg-red-500 rounded-full shadow-lg hover:bg-teal-400" type="button">
                   Send Message
                 </button>
+                        </div>
                     </div>
+                </form>
+            </div>
+        </section>
+
+
+        <footer class="bg-gray-900 p-4 mt-auto flex flex-col items-center sm:px-4"><br>
+            <p class="text-xs font-bold text-gray-600 mb-4 sm:text-base">Copyright &copy; 2022 My Portfolio</p>
+            <div class="container mx-auto flex flex-col items-center px-4">
+
+                <div class="flex items-center">
+                    <i class="fas fa-envelope text-4xl text-gray-100 mr-4"></i>
+                    <a href="mailto:creatifying@gmail.com" class="text-2xl font-bold text-gray-100 hover:text-gray-400">creatifyingg@gmail.com</a>
                 </div>
-            </form>
-        </div>
-    </section>
 
-    <hr>
-    <footer class="bg-black p-4 mt-auto flex flex-col items-center sm:px-4">
-        <p class="text-xs font-bold text-gray-600 mb-4 sm:text-base">Copyright &copy; 2022 My Portfolio</p>
-        <div class="container mx-auto flex flex-col items-center px-4">
+                <center>
 
-            <div class="flex items-center">
-                <i class="fas fa-envelope text-4xl text-gray-100 mr-4"></i>
-                <a href="mailto:creatifying@gmail.com" class="text-2xl font-bold text-gray-100 hover:text-gray-400">creatifyingg@gmail.com</a>
+                    <p class="text-gray-100 mt-4">Or you can find me on social media</p>
+                </center>
+                <div class="mt-4 flex">
+                    <a href="#" class="mx-4 text-4xl font-bold text-gray-100 hover:text-gray-400">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="#" class="mx-4 text-4xl font-bold text-gray-100 hover:text-gray-400">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                    <a href="#" class="mx-4 text-4xl font-bold text-gray-100 hover:text-gray-400">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </div>
             </div>
-            <p class="text-gray-100 mt-4">Or you can find me on social media:</p>
-            <div class="mt-4 flex">
-                <a href="#" class="mx-4 text-4xl font-bold text-gray-100 hover:text-gray-400">
-                    <i class="fab fa-twitter"></i>
-                </a>
-                <a href="#" class="mx-4 text-4xl font-bold text-gray-100 hover:text-gray-400">
-                    <i class="fab fa-linkedin"></i>
-                </a>
-                <a href="#" class="mx-4 text-4xl font-bold text-gray-100 hover:text-gray-400">
-                    <i class="fab fa-github"></i>
-                </a>
-            </div>
-        </div>
 
-    </footer>
+        </footer>
 
 
-    <!-- Your main content goes here -->
-    <script src="main.js"></script>
+        <!-- Your main content goes here -->
+        <script src="main.js"></script>
 </body>
 
 </html>
